fixed ui alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
 
-body {
+.all {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -53,7 +53,7 @@ h4 {
   margin-top: 5px;
   display: flex;
   flex-direction: column;
-  margin-bottom: 12px;
+  margin-bottom: 8px;
 }
 
 label{
