--- a/client/src/styles/Summary.css
+++ b/client/src/styles/Summary.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     background-color: rgb(243, 243, 243);
-    margin: 12px 0;
+    margin: 8px 0;
     padding: 12px;
   }
   
